--- a/mainstyle.css
+++ b/mainstyle.css
@@ -5,222 +5,358 @@ main black - #2A2626
 */
 
 ::selection {
-   color: rgb(245, 245, 245) !important;
-   background: rgb(33, 33, 33) !important;
+    color: rgb(245, 245, 245) !important;
+    background: rgb(33, 33, 33) !important;
 }
+
 body {
-   overflow-x: hidden;
+    overflow-x: hidden;
 }
+
 .nav-no-scroll * img.logoimg {
-   max-width: 40px;
-   margin-top: -10px;
-   -webkit-transition: all 0.5s;
-   transition: all 0.5s;
+    max-width: 40px;
+    margin-top: -10px;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
+
 .navbar-custom {}
+
 .nav-no-scroll {
-   background-color: rgba(250, 250, 250, 0.2);
-   border-color: #E6E4E4;
-   -webkit-transition: all 1s;
-   transition: all 1s;
+    font-size: 17px;
+    background-color: rgba(250, 250, 250, 0.2);
+    border-color: #E6E4E4;
+    -webkit-transition: all 1s;
+    transition: all 1s;
 }
+
 .nav-no-scroll * a:hover {
-   color: #E1E4F0 !important;
+    color: #E1E4F0 !important;
 }
-.nav-scrolled * a {
-   font-size: 17px;
+
+.nav-scrolled * a.nav-link {
+    font-size: 14px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
+
+
+/*
 .nav-scrolled * a:hover {
    color: #D13B46 !important;
 }
+*/
+
 .nav-scrolled * img.logoimg {
-   margin-top: -5px;
-   max-width: 30px;
-   -webkit-transition: all 0.5s;
-   transition: all 0.5s;
-}
-.nav-scrolled {
-   background-color: #f0f0f0;
-   -webkit-transition: all 1s;
-   transition: all 1s;
-}
-ul.nav {
-   float: right !important;
-}
-ul.nav a {
-   font-family: 'Product Sans';
-   color: #AFA9AA !important;
-   -o-transition: .5s;
-   -ms-transition: .5s;
-   -moz-transition: .5s;
-   -webkit-transition: .5s;
-   transition: .5s;
+    margin-top: 11px;
+    margin-left: 15px;
+    max-width: 0px;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
 
-/*ul.nav a:hover {
-   color: #E1E4F0 !important;
-}*/
+.nav-scrolled {
+    background-color: transparent;
+    border-bottom: none;
+    -webkit-transition: all 1s;
+    transition: all 1s;
+}
+
+ul.nav {
+    float: right !important;
+}
+
+ul.nav a {
+    font-family: 'Product Sans';
+    color: #AFA9AA !important;
+    -o-transition: .5s;
+    -ms-transition: .5s;
+    -moz-transition: .5s;
+    -webkit-transition: .5s;
+    transition: .5s;
+}
 
 .thumb1 {
-   background: url(images/backtest2.jpg) 50% 50% no-repeat;
-   /* 50% 50% centers image in div */
-   width: 100vw;
-   height: 100vh;
+    /*   background: url(images/backtest2.jpg) 50% 50% no-repeat;*/
+    background-color: #212121;
+    /* 50% 50% centers image in div */
+    width: 100vw;
+    height: 100vh;
 }
+
 #welcome {
-   font-family: 'Product Sans';
-   color: #E1E4F0;
-   display: block;
-   text-align: center;
-   padding-top: calc(50vh - 150px);
-   margin-left: calc(50% - 225px);
-   vertical-align: middle;
+    font-family: 'Product Sans';
+    color: #E1E4F0;
+    display: block;
+    text-align: center;
+    padding-top: calc(50vh - 150px);
+    margin-left: calc(50% - 225px);
+    vertical-align: middle;
 }
+
 #welcome h1 {
-   font-size: 60px;
+    font-size: 60px;
 }
+
 #welcome p {
-   font-size: 20px;
+    font-size: 20px;
 }
+
 #welcome hr {
-   align-self: center;
-   height: 4px;
-   background: #D13B46;
-   border: 0px;
-   width: 20%;
+    align-self: center;
+    height: 4px;
+    background: #D13B46;
+    border: 0px;
+    width: 20%;
+}
+
+.read-more {
+    font-family: 'Product Sans';
+    color: #E1E4F0;
+    font-size: 20px;
 }
 
 .myButton {
-   -moz-box-shadow: inset 0px 1px 0px 0px #C95966;
-   -webkit-box-shadow: inset 0px 1px 0px 0px #C95966;
-   box-shadow: inset 0px 1px 0px 0px #C95966;
-   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #d13b46), color-stop(1, #bc3040));
-   background: -moz-linear-gradient(top, #d13b46 5%, #bc3040 100%);
-   background: -webkit-linear-gradient(top, #d13b46 5%, #bc3040 100%);
-   background: -o-linear-gradient(top, #d13b46 5%, #bc3040 100%);
-   background: -ms-linear-gradient(top, #d13b46 5%, #bc3040 100%);
-   background: linear-gradient(to bottom, #d13b46 5%, #bc3040 100%);
-   filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#d13b46', endColorstr='#bc3040', GradientType=0);
-   background-color: #d13b46;
-   -moz-border-radius: 10px;
-   -webkit-border-radius: 10px;
-   border-radius: 10px;
-   border: 1px solid #A92B3A !important;
-   display: inline-block;
-   cursor: pointer;
-   color: #2A2626 !important;
-   font-family: 'Product Sans';
-   font-size: 15px;
-   font-weight: bold;
-   padding: 10px 20px;
-   text-decoration: none;
-   text-shadow: 0px 1px 0px #982734;
-   -webkit-transition: color 0.5s;
-   transition: color 0.5s;
-}
-.myButton:hover {
-   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #bc3040), color-stop(1, #d13b46));
-   background: -moz-linear-gradient(top, #bc3040 5%, #d13b46 100%);
-   background: -webkit-linear-gradient(top, #bc3040 5%, #d13b46 100%);
-   background: -o-linear-gradient(top, #bc3040 5%, #d13b46 100%);
-   background: -ms-linear-gradient(top, #bc3040 5%, #d13b46 100%);
-   background: linear-gradient(to bottom, #bc3040 5%, #d13b46 100%);
-   filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#bc3040', endColorstr='#d13b46', GradientType=0);
-   background-color: #bc3040;
-   border: 1px solid #A92B3A;
-   color: #F8FFED !important;
-   -webkit-transition: color 0.5s;
-   transition: color 0.5s;
-}
-.myButton:active {
-   position: relative;
-   top: 1px;
+    -moz-box-shadow: inset 0px 1px 0px 0px #C95966;
+    -webkit-box-shadow: inset 0px 1px 0px 0px #C95966;
+    box-shadow: inset 0px 1px 0px 0px #C95966;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #d13b46), color-stop(1, #bc3040));
+    background: -moz-linear-gradient(top, #d13b46 5%, #bc3040 100%);
+    background: -webkit-linear-gradient(top, #d13b46 5%, #bc3040 100%);
+    background: -o-linear-gradient(top, #d13b46 5%, #bc3040 100%);
+    background: -ms-linear-gradient(top, #d13b46 5%, #bc3040 100%);
+    background: linear-gradient(to bottom, #d13b46 5%, #bc3040 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#d13b46', endColorstr='#bc3040', GradientType=0);
+    background-color: #d13b46;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border: 1px solid #A92B3A !important;
+    display: inline-block;
+    cursor: pointer;
+    color: #2A2626 !important;
+    font-family: 'Product Sans';
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px 20px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #982734;
+    -webkit-transition: color 0.5s;
+    transition: color 0.5s;
 }
 
+.myButton:hover {
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #bc3040), color-stop(1, #d13b46));
+    background: -moz-linear-gradient(top, #bc3040 5%, #d13b46 100%);
+    background: -webkit-linear-gradient(top, #bc3040 5%, #d13b46 100%);
+    background: -o-linear-gradient(top, #bc3040 5%, #d13b46 100%);
+    background: -ms-linear-gradient(top, #bc3040 5%, #d13b46 100%);
+    background: linear-gradient(to bottom, #bc3040 5%, #d13b46 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#bc3040', endColorstr='#d13b46', GradientType=0);
+    background-color: #bc3040;
+    border: 1px solid #A92B3A;
+    color: #F8FFED !important;
+    -webkit-transition: color 0.5s;
+    transition: color 0.5s;
+}
+
+.myButton:active {
+    position: relative;
+    top: 1px;
+}
 
 a.text-link {
-  transition: .3s;
-  background-position: top left;
-  background-image: url(images/linkbg.png);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  position: relative;
-  display: inline-block;
-  white-space: nowrap;
+    transition: .3s;
+    background-position: top left;
+    background-image: url(images/linkbg.png);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    position: relative;
+    display: inline-block;
+    white-space: nowrap;
 }
+
 a.text-link:before {
-  position: absolute;
-  content: '';
-  background: #4A90E2;
-  left: 0;
-  right: 0;
-  bottom: 3px;
-  height: 2px;
-  transition: .3s .1s;
+    position: absolute;
+    content: '';
+    background: #4A90E2;
+    left: 0;
+    right: 0;
+    bottom: 3px;
+    height: 2px;
+    transition: .3s .1s;
 }
+
 a.text-link:hover {
-  transition: .6s .1s;
-  background-position: bottom right;
+    transition: .6s .1s;
+    background-position: bottom right;
 }
+
 a.text-link:hover:before {
-  transition: .3s;
-  transform: translateY(-100%) scaleY(0);
-  opacity: 0;
+    transition: .3s;
+    transform: translateY(-100%) scaleY(0);
+    opacity: 0;
+}
+
+a.nav-link {
+    transition: .3s;
+    background-position: top left;
+    background-image: url(images/linkbg.png);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    position: relative;
+    display: inline-block;
+    white-space: nowrap;
+}
+
+a.nav-link:hover {
+    transition: .3s .1s;
+    background-position: bottom right;
+}
+
+a.nav-link:hover:before {
+    transition: .3s;
+    transform: translateY(-100%) scaleY(0);
+    opacity: 0;
 }
 
 #about {
-   height: 1600px;
-   width: 100vw;
-   background-color: #3B3535;
+    height: 1600px;
+    width: 100vw;
+    background-color: #3B3535;
 }
 
 #side-buttons {
-   position: fixed;
-   top: calc(50% - 75px);
+    position: fixed;
+    top: calc(50% - 75px);
 }
 
-#side-facebook, #side-twitter, #side-google {
-   position: relative;
-   max-height: 50px;
-   left: -148px;
-   -webkit-transition: left 1.0s;
-   transition: left 1.0s;
+#side-facebook,
+#side-twitter,
+#side-google {
+    position: relative;
+    max-height: 50px;
+    left: -148px;
+    -webkit-transition: left 1.0s;
+    transition: left 1.0s;
 }
 
-#side-facebook:hover, #side-twitter:hover, #side-google:hover {
-   left: 0px;
-   -webkit-transition: left 0.5s;
-   transition: left 0.5s;
+#side-facebook:hover,
+#side-twitter:hover,
+#side-google:hover {
+    left: 0px;
+    -webkit-transition: left 0.5s;
+    transition: left 0.5s;
 }
-
 
 .corner-ribbon {
-   width: 200px;
-   background: #e43;
-   position: absolute;
-   top: 25px;
-   left: -50px;
-   text-align: center;
-   line-height: 50px;
-   letter-spacing: 1px;
-   color: #f0f0f0;
-   transform: rotate(-45deg);
-   -webkit-transform: rotate(-45deg);
+    width: 200px;
+    background: #e43;
+    position: absolute;
+    top: 25px;
+    left: -50px;
+    text-align: center;
+    line-height: 50px;
+    letter-spacing: 1px;
+    color: #f0f0f0;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
 }
+
 .corner-ribbon.sticky {
-   position: fixed;
+    position: fixed;
 }
+
 .corner-ribbon.shadow {
-   box-shadow: 0 0 3px rgba(0, 0, 0, .3);
+    box-shadow: 0 0 3px rgba(0, 0, 0, .3);
 }
+
 .corner-ribbon.bottom-right {
-   top: auto;
-   right: -50px;
-   bottom: 25px;
-   left: auto;
-   transform: rotate(-4deg);
-   -webkit-transform: rotate(-45deg);
+    top: auto;
+    right: -50px;
+    bottom: 25px;
+    left: auto;
+    transform: rotate(-4deg);
+    -webkit-transform: rotate(-45deg);
 }
+
 .corner-ribbon.red {
-   background: #1b9;
+    background: #1b9;
+}
+
+.hex-container {
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.hexagon {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    width: 75%;
+    height: 0;
+    padding-bottom: 86.60254%;
+    overflow: hidden;
+    -webkit-transform: rotate(-60deg) skewY(30deg) translateZ(0);
+    transform: rotate(-60deg) skewY(30deg) translateZ(0);
+}
+
+.hexagon::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url(http://bit.ly/1UcSDkz);
+    background-position: -100px;
+    background-size: 300px;
+    -webkit-transform: skewY(-30deg) rotate(60deg);
+    transform: skewY(-30deg) rotate(60deg);
+}
+
+div.inline { float:left; }
+.clearBoth { clear:both; }
+
+.wrap {
+    position: fixed;
+    width: 168px;
+    top: 92vh;
+    left: 50%;
+    transform: translateX(-50%);
+    border-bottom: 1px solid white;
+}
+
+.social {
+    font-size: 2.5em;
+    height: 64px;
+    width: 100%;
+    display: block;
+    overflow: hidden;
+}
+
+.icon {
+    position: relative;
+    top: 32px;
+    -webkit-transition: all 200ms cubic-bezier(.75, 0, .31, 1);
+    -moz-transition: all 200ms cubic-bezier(.75, 0, .31, 1);
+    -ms-transition: all 200ms cubic-bezier(.75, 0, .31, 1);
+    -o-transition: all 200ms cubic-bezier(.75, 0, .31, 1);
+    transition: all 200ms cubic-bezier(.75, 0, .31, 1);
+}
+
+.icon:hover {
+    top: 0px;
+}
+
+.github-icon, .in-icon, .twitter-icon {
+    position: relative;
+    width: 64px;
+    margin: 0 10px;
+}
+
+.in-div{
+    float: right;
 }
