--- a/mainstyle.css
+++ b/mainstyle.css
@@ -185,7 +185,7 @@ a.nav-link:hover:before {
 }
 
 #blueprints {
-    height: 1600px;
+    height: 100vh;
     width: 100vw;
     background-color: #3B3535;
 }
