--- a/mainstyle.css
+++ b/mainstyle.css
@@ -186,7 +186,24 @@ a.nav-link:hover:before {
 #blueprints {
     height: 100vh;
     width: 100vw;
-    background-color: #3B3535;
+/*    background-color: #3B3535;*/
+    
+/*
+    background-image: url(images/blueprint.png);
+    background-size: 1000px 1000px;
+    background-position: 50px -373px
+*/ 
+  font-family: 'Fredericka the Great', cursive;
+  font-size: 4em;
+  color: white;
+  line-height: 1.6;
+  background-color:#269;
+  background-image: linear-gradient(rgba(255,255,255,.4), transparent 2px),
+  linear-gradient(90deg, rgba(255,255,255,.4), transparent 2px),
+  linear-gradient(rgba(255,255,255,.25) 1px, transparent 1px),
+  linear-gradient(90deg, rgba(255,255,255,.25) 1px, transparent 1px);
+  background-size:100px 100px, 100px 100px, 20px 20px, 20px 20px;
+  background-position:-2px -2px, -2px -2px, -1px -1px, -1px -1px;
 }
 
 #side-buttons {
