--- a/mainstyle.css
+++ b/mainstyle.css
@@ -186,8 +186,26 @@ a.nav-link:hover:before {
 #blueprints {
     height: 100vh;
     width: 100vw;
-    background-color: #3B3535;
+    font-family: "Roboto", sans-serif;
+  font-size: 1em;
+  line-height: 1.6;
+  background-color:#269;
+  background-image: linear-gradient(rgba(255,255,255,.4), transparent 2px),
+  linear-gradient(90deg, rgba(255,255,255,.4), transparent 2px),
+  linear-gradient(rgba(255,255,255,.25) 1px, transparent 1px),
+  linear-gradient(90deg, rgba(255,255,255,.25) 1px, transparent 1px);
+  background-size:100px 100px, 100px 100px, 20px 20px, 20px 20px;
+  background-position:-2px -2px, -2px -2px, -1px -1px, -1px -1px;
 }
+
+.blueprint-box{
+  color: white;
+  background:rgba( 255,255,255, .1 );
+  border:3px dashed rgba( 255,255,255, .8 ); 
+  box-sizing:border-box;
+  margin:20px 2%;
+}
+
 
 #side-buttons {
     position: fixed;
@@ -282,7 +300,7 @@ a.nav-link:hover:before {
 
 .links-bar{
   position: fixed;
-    min-width: 200px;
+  min-width: 200px;
   width: 20%;
   height: 48px;
   top: 90vh;
@@ -290,6 +308,12 @@ a.nav-link:hover:before {
   transform: translateX(-50%);
   border-bottom: 1px solid white;
   overflow: hidden;
+    
+        -o-transition: .5s;
+    -ms-transition: .5s;
+    -moz-transition: .5s;
+    -webkit-transition: .5s;
+    transition: .5s;
 }
 
 .ico1{
