--- a/Styles/css/expanded/dark-theme.css
+++ b/Styles/css/expanded/dark-theme.css
@@ -1,1 +1,11 @@
-/* No CSS *//*# sourceMappingURL=dark-theme.css.map */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-transition: background-color .2s, color .2s;
+  transition: background-color .2s, color .2s;
+}
+
+body {
+  background-color: #212121;
+}
+/*# sourceMappingURL=dark-theme.css.map */
