--- a/Styles/scss/Variables/_variables.scss
+++ b/Styles/scss/Variables/_variables.scss
@@ -1,20 +1,20 @@
 // Brand Colors
-$br_primary: "#EF4848";
-$br_primary_dark: "#993030";
+$br_primary: #EF4848;
+$br_primary_dark: #993030;
 
-$br_secondary: "#6FA6EF";
-$br_secondary_dark: "#4A5C7F";
+$br_secondary: #6FA6EF;
+$br_secondary_dark: #4A5C7F;
 
-$br_tertiary: "#3D3D50";
-$br_tertiary_dark: "#141432";
+$br_tertiary: #3D3D50;
+$br_tertiary_dark: #141432;
 
 // Layout Colors
-$lt_bg: "#F5F6F7";
-$dt_bg: "#212121";
+$lt_bg: #F5F6F7;
+$dt_bg: #212121;
 
 $primary: $br_primary;
-$lt_secondary: "#DCE1E5";
-$dt_secondary: "#44484C";
+$lt_secondary: #DCE1E5;
+$dt_secondary: #44484C;
 $lt_text: $dt_bg;
 $dt_text: $lt_bg;
 $lt_subtext: $dt_secondary;
@@ -22,14 +22,14 @@ $dt_subtext: $lt_secondary;
 
 
 // Denotive Colors
-$error_col: "#F23325";
-$success_col: "#34BF91";
-$lt_disabled_col: "#AFB0B2";
-$dt_disabled_col: "#686E72";
+$error_col: #F23325;
+$success_col: #34BF91;
+$lt_disabled_col: #AFB0B2;
+$dt_disabled_col: #686E72;
 
 // Interactive Colors
-$int_col: "#78BBFF";
-$int_col_ltp1: "#5EA4DD";
-$int_col_ltp2: "#5590C6";
-$int_col_dtp1: "#7BD0FF";
-$int_col_dtp2: "#85DFFF";
+$int_col: #78BBFF;
+$int_col_ltp1: #5EA4DD;
+$int_col_ltp2: #5590C6;
+$int_col_dtp1: #7BD0FF;
+$int_col_dtp2: #85DFFF;
