--- a/mainstyle.css
+++ b/mainstyle.css
@@ -282,7 +282,7 @@ a.nav-link:hover:before {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url(http://bit.ly/1UcSDkz);
+    background-image: url(images/me.jpg);
     background-position: -100px;
     background-size: 300px;
     -webkit-transform: skewY(-30deg) rotate(60deg);
