--- a/Styles/scss/Components/_hex_portrait.scss
+++ b/Styles/scss/Components/_hex_portrait.scss
@@ -24,9 +24,9 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url(http://bit.ly/1UcSDkz);
-    background-position: -100px;
-    background-size: 300px;
+    background-image: url(/images/me.jpg);
+    background-position: -13px;
+    background-size: 173px;
     -webkit-transform: skewY(-30deg) rotate(60deg);
     transform: skewY(-30deg) rotate(60deg);
 }
