--- a/Styles/css/expanded/light-theme.css
+++ b/Styles/css/expanded/light-theme.css
@@ -124,6 +124,8 @@ body {
 
 .hamburger-menu span:nth-child(2), .hamburger-menu span:nth-child(3) {
   top: .5em;
+  width: 80%;
+  left: 20%;
 }
 
 .hamburger-menu span:nth-child(4) {
@@ -138,11 +140,15 @@ body {
 }
 
 .hamburger-menu.open span:nth-child(2) {
+  left: 10%;
+  right: 10%;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
 }
 
 .hamburger-menu.open span:nth-child(3) {
+  left: 10%;
+  right: 10%;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
 }
