--- a/Styles/scss/Components/_navbar.scss
+++ b/Styles/scss/Components/_navbar.scss
@@ -25,7 +25,8 @@
 
         &:nth-child(2), &:nth-child(3){
             top: .5em;
-            // width: 80%;
+            width: 80%;
+            left: 20%;
         }
 
         &:nth-child(4){
@@ -42,9 +43,13 @@
         }
 
         span:nth-child(2){
+            left: 10%;
+            right: 10%;
             transform: rotate(45deg);
         }
         span:nth-child(3){
+            left: 10%;
+            right: 10%;
             transform: rotate(-45deg);
         }
 
