--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,4 @@
-@import "tailwindcss";
-
+@use "fonts.scss";
 /* You can define your custom theme variables directly in CSS using @theme */
 @theme {
     --color-primary: #3b82f6;
@@ -17,6 +16,15 @@ body {
     /* Example background */
     color: rgba(255, 255, 255, 0.87);
     /* Example text color */
+}
+
+#root { 
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    min-width: 100vw;
+    justify-content: center;
+    align-items: center
 }
 
 a {
